# codex-control

./: .gitignore  Cargo.toml  NOTICE  README.md  SECURITY.md  conversation_log.md  package-lock.json  package.json  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
.github/: dependabot.yml
docs/: AGENT_ABSTRACTION.md  AGENT_APPROVAL_VALIDATION.md  ANNOUNCEMENT.md  MOBILE.md  READINESS_BACKED_AGENTS.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_READINESS.md  RELEASING.md
mobile/: capacitor.config.json  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
native/: binding.gyp
schemas/: README.md
scripts/: .bootstrap-patch-part-00  .bootstrap-patch-part-01  .bootstrap-repair-002-0  .bootstrap-repair-002-1  .bootstrap-repair-002-2  .bootstrap-repair-002-3  .bootstrap-repair-002-4  .bootstrap-repair-002-5  .bootstrap-repair-002-5-0  .bootstrap-repair-002-5-1  .bootstrap-repair-002-5-2  .bootstrap-repair-002-5-3  .bootstrap-repair-002-5-4  .bootstrap-v2-manifest  .bootstrap-v2-part-000  .bootstrap-v2-part-001  .bootstrap-v2-part-002  .bootstrap-v2-part-003  .bootstrap-v2-part-004  .bootstrap-v2-part-005  .bootstrap-v2-part-006  .bootstrap-v2-part-007  .bootstrap-v2-part-008  .bootstrap-v2-part-009  .bootstrap-v2-part-010  .bootstrap-v2-part-011  .bootstrap-v2-part-012  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/codex/: mod.rs  protocol.rs
src-tauri/src/git/: mod.rs
src-tauri/src/security/: mod.rs
src-tauri/src/storage/: mod.rs
(+76 files in other folders)
